--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+/* src/styles.css */
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  background: transparent;
+}
+
+body {
+  font-family: 'Arial', sans-serif;
+  overflow: hidden; /* Opcional, se não quiser scroll */
+}
