--- a/src/app/pages/environments/environments.component.html
+++ b/src/app/pages/environments/environments.component.html
@@ -19,9 +19,9 @@
         <div class="menu-icons">
             <div class="menu-item-wrapper active">
                 <img src="assets/environmentsIcon.png" alt="Ambientes" class="menu-icon" />
-                <span class="menu-text">Meus Ambientes</span>
+                <span class="menu-text">Ambientes</span>
             </div>
-            <div class="menu-item-wrapper">
+            <div class="menu-item-wrapper" routerLink="/user">
                 <img src="assets/userIcon.png" alt="Perfil" class="menu-icon" />
                 <span class="menu-text">Perfil</span>
             </div>
