--- a/src/app/pages/environments/environments.component.css
+++ b/src/app/pages/environments/environments.component.css
@@ -470,7 +470,7 @@
 
 .message-box {
     position: fixed;
-    bottom: 20px;
+    bottom: 10px;
     right: 20px;
     min-width: 250px;
     padding: 15px 20px;
@@ -484,6 +484,7 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     animation: fadein 0.5s;
+    transition: opacity 0.3s, transform 0.3s;
 }
 
 .error-message {
