Feature_32 - (TDD) - feito testes e componentes para Metas

--- a/src/app/pages/environments/environments.component.html
+++ b/src/app/pages/environments/environments.component.html
@@ -130,4 +130,8 @@
             </div>
         </div>
     </div>
+    <div class="loading-overlay" *ngIf="isLoading">
+        <div class="spinner"></div>
+        <p class="loading-text">Carregando...</p>
+    </div>
 </div>
