--- a/src/app/pages/user/user.component.css
+++ b/src/app/pages/user/user.component.css
@@ -161,6 +161,28 @@
     margin-left: 90px;
 }
 
+.content.sidebar-open::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 999;
+    opacity: 0;
+    animation: fadeInOverlay 0.3s ease forwards;
+}
+ 
+@keyframes fadeInOverlay {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .header {
     display: flex;
     justify-content: space-between;
