Feature_34 - feito Tdd e componentes para tela de transações

--- a/src/app/pages/goals/goals.component.html
+++ b/src/app/pages/goals/goals.component.html
@@ -26,6 +26,10 @@
                 <img src="assets/goalsIcon.png" alt="Metas" class="menu-icon" />
                 <span class="menu-text">Metas</span>
             </div>
+            <div class="menu-item-wrapper" routerLink="/transactions">
+                <img src="assets/moneyIcon.png" alt="Transações" class="menu-icon" />
+                <span class="menu-text">Transações</span>
+            </div>
         </div>
 
         <!-- Logout -->
