Feature_36 - feito Tdd, lógicas e telas para dashboard

--- a/src/app/pages/goals/goals.component.html
+++ b/src/app/pages/goals/goals.component.html
@@ -22,6 +22,10 @@
 
         <!-- Menu de ícones -->
         <div class="menu-icons">
+            <div class="menu-item-wrapper" routerLink="/dashboard">
+                <img src="assets/dashIcon.png" alt="Dashboard" class="menu-icon" />
+                <span class="menu-text">Dashboard</span>
+            </div>
             <div class="menu-item-wrapper active">
                 <img src="assets/goalsIcon.png" alt="Metas" class="menu-icon" />
                 <span class="menu-text">Metas</span>
