--- a/src/app/pages/goals/goals.component.html
+++ b/src/app/pages/goals/goals.component.html
@@ -34,6 +34,10 @@
                 <img src="assets/moneyIcon.png" alt="Transações" class="menu-icon" />
                 <span class="menu-text">Transações</span>
             </div>
+            <div class="menu-item-wrapper" routerLink="/ranking">
+                <img src="assets/rankIcon.png" alt="Ranking" class="menu-icon" />
+                <span class="menu-text">Ranking</span>
+            </div>
         </div>
 
         <!-- Logout -->
