refact - ajuste de label no login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -15,9 +15,9 @@
             Senha é obrigatória.
         </div>
 
-        <p class="forgot-password" routerLink="/change-password">
+        <!-- <p class="forgot-password" routerLink="/change-password">
             Esqueci minha senha
-        </p>
+        </p> -->
 
         <div *ngIf="backendError" class="message-box error-message">
             {{ backendError }}
